fix: configure line wrapping via codemirror extension
Closes #4556

--- a/client/src/app/tabs/xml/XMLEditor.less
+++ b/client/src/app/tabs/xml/XMLEditor.less
@@ -38,7 +38,6 @@
 
     .cm-content {
       width: 100%;
-      white-space: normal;
       padding-right: 18px;
     }
 
@@ -65,7 +64,7 @@
       background-color: var(--xml-editor-button-background-color);
       text-transform: capitalize;
     }
-    
+
     .cm-textfield {
       padding: 4px 8px;
       font-family: var(--font-family-monospace);
@@ -77,7 +76,7 @@
         font-family: var(--font-family);
       }
     }
-    
+
     .cm-panel.cm-search {
       label {
         font-size: var(--xml-editor-font-size-small);
@@ -91,7 +90,7 @@
 
       [name=close] {
         font-size: 24px;
-        padding: 0px 8px; 
+        padding: 0px 8px;
       }
     }
   }
